# EduMind

./: .gitignore  AGENTS.md  Cargo.toml  EDUMIND_MASTER_BUILD_PROMPT.md  LICENSE  README.md
.github/workflows/: ci.yml
crates/edumind-core/: Cargo.toml
crates/edumind-core/src/: domain.rs  evidence.rs  learning.rs  lib.rs  research.rs  runs.rs  wellness.rs
docs/: AGENT_SANDBOX.md  BUILD_WEEK_SUBMISSION.md  HARDENING.md  MEETMIND_GATEWAY_BRIDGE.md
edumind/: Cargo.toml  config.example.yaml  routing.yaml
edumind-tauri/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
edumind-tauri/e2e/: app.spec.js  premium-workflows.spec.js
edumind-tauri/scripts/: routine.test.mjs
edumind-tauri/src/: App.jsx  main.jsx  reference-ui.css  styles.css  tauri-bridge.js
edumind-tauri/src-tauri/: Cargo.toml  tauri.conf.json
edumind-tauri/src-tauri/capabilities/: default.json
edumind-tauri/src-tauri/scripts/: generate-icon.ps1
edumind-tauri/src-tauri/src/: agent_management.rs  lib.rs  llm_settings.rs  main.rs  meetmind_sync.rs
edumind-tauri/src/components/: AdminPanel.jsx  AgentManagementPanel.jsx  ChatPanel.jsx  CommandPalette.jsx  ConnectionModal.jsx  ErrorBoundary.jsx  GroupStudyPanel.jsx  MeetMindInbox.jsx  MemoryGraphPanel.jsx  ModulePanel.jsx  (+17 more)
edumind/src/: lib.rs  main.rs  runs.rs  secrets.rs  security.rs  student.rs
edumind/src/agent/: audit.rs  capabilities.rs  mod.rs  model.rs  registry.rs  run_engine.rs  runner.rs  sandbox.rs  session.rs  subagent.rs  tool_policy.rs  tools.rs
edumind/src/channels/: manager.rs  mod.rs  telegram.rs
edumind/src/config/: loader.rs  mod.rs  redact.rs  types.rs
edumind/src/gateway/: agent.rs  auth.rs  chat.rs  class_notes.rs  collab.rs  group_study.rs  memory.rs  mod.rs  protocol.rs  research.rs  runs.rs  runtime.rs  scheduler.rs  server.rs  student_pages.rs  study.rs  wellness.rs
edumind/src/infra/: blocking.rs  error.rs  mod.rs  sqlite.rs  telemetry.rs
edumind/src/jobs/: learning_refresh.rs  mod.rs
edumind/src/mcp/: mod.rs  notebooklm.rs
edumind/src/memory/: advanced_search.rs  collab.rs  embedder.rs  hermes.rs  hybrid.rs  knowledge_graph.rs  lm_wiki.rs  memory_intelligence.rs  mod.rs  module_memory.rs  pipeline.rs  privacy.rs  store.rs  vector.rs  vector_index.rs
edumind/src/research/: analysis.rs  bibliography.rs  connectors.rs  fulltext.rs  mod.rs  ocr.rs  pipeline.rs  plugins.rs  project.rs  ranking.rs  run_store.rs  supervisor.rs  synthesis.rs  validation.rs
edumind/src/routing/: mod.rs  resolver.rs  router.rs  session_key.rs  types.rs
edumind/src/runtime_tools/: artifacts.rs  converter.rs  images.rs  interpreter.rs  latex_compile.rs  mod.rs  pdf.rs  process_guard.rs  service.rs
edumind/src/runtime_tools/process_guard/: windows_job.rs
edumind/src/security/: action_password.rs  content_guard.rs  secrets.rs  tool_limits.rs  write_sandbox.rs
edumind/src/study/: learning_engine.rs  mod.rs  srs.rs
edumind/tests/: premium_evaluation.rs
edumind/tests/fixtures/premium_eval/: degraded_evidence.json  grounded_answers.json  negative_injection.json  normal_recommendations.json  planner_conflicts.json  recovery_budget.json  thresholds.json  vector_provenance.json
mobile/: README.md  local.properties.example  settings.gradle.kts
mobile/app/: build.gradle.kts
plan/: upgrade-edumind-premium-platform-1.md
(+40 files in other folders)
