[workspace]
resolver = "2"
members = [
    "crates/edumind-core",
    "edumind",
]
exclude = ["edumind-tauri/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
argon2 = "0.5.3"
aes-gcm = "0.10.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
pdf-extract = "0.7.12"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
zeroize = "1.8.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
