[package]
name = "edumind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "edumind"
path = "src/lib.rs"

[[bin]]
name = "edumind"
path = "src/main.rs"

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
edumind-core = { path = "../crates/edumind-core" }
futures-util.workspace = true
jsonwebtoken.workspace = true
keyring.workspace = true
pdf-extract.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
windows-sys.workspace = true
zeroize.workspace = true
