[package]
name = "edumind-desktop"
version = "0.1.0"
description = "EduMind local-first desktop application"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[lib]
name = "edumind_desktop_runtime"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = "0.4.44"
edumind = { path = "../../edumind" }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1.48.0", features = ["sync"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["v4"] }
